Refactored to use URL instead of URI